# LibProjectiveGeometry

./: CMakeLists.txt  readme.md
code/LibProjectiveGeometry/: ProjectiveGeometry.hxx
code/LibProjectiveGeometry/LibOpterix/: ParameterGui.hxx
tools/GeometryExamples/: CMakeLists.txt  main.cpp
